--- a/package.xml
+++ b/package.xml
@@ -10,5 +10,5 @@
   <buildtool_depend>catkin</buildtool_depend>
   <exec_depend>gazebo_plugins</exec_depend>
   <exec_depend>urdf</exec_depend>
-  <exec_depend>xarco</exec_depend>
+  <exec_depend>xacro</exec_depend>
 </package>
